# DoCon

./: README.md  README.txt
0.01/: README
0.01/docon/: README.txt
0.01/docon/doc/: introd.txt
0.01/docon/docon/: Categ.hi  Categ.hs  Categ1.hi  Categ1.hs  Fraction.hi  Fraction.hs  Generic.hi  Generic.hs  Main.h  Main.hi  Main.hs  Makefile  Matrix.hi  Matrix.hs  PreludeChar.hi  PreludeChar.hs  PreludeInteger.hi  PreludeInteger.hs  PreludeList.hi  PreludeList.hs  PreludePair.hi  PreludePair.hs  PreludeRational.hi  PreludeRational.hs  Res_z2.hi  Res_z2.hs
2.08/: announce.txt  install.txt  license.txt
2.08/docon/: manual.ps
2.08/docon/source/: AlgSymmF.hs  Categs.hs  DExport.hs  DPair.hs  DPrelude.hs  Fraction.hs  GBasis.hs  LinAlg.hs  Makefile  Partition.hs  Permut.hs  Pol.hs  Residue.hs  RingModule.hs  SetGroup.hs  Z.hs  (+1 more)
2.11/: announce.txt  install.txt  license.txt
2.11/docon/: manual.lat  manual.ps
2.11/docon/source/: AlgSymmF.hs  Categs.hs  Categs_.hs  Char_.hs  Common_.hs  DExport.hs  DPair.hs  DPair_.hs  DPrelude.hs  Det_.hs  EPol0_.hs  EPol1_.hs  EPol_.hs  FAA0_.hs  FAANF_.hs  Fract_.hs  Fraction.hs  FreeMonoid.hs  GBasEuc_.hs  GBasFld_.hs  GBas_.hs  GBasis.hs  HookBand_.hs  IdealSyz_.hs  Iparse_.hs  LinAlg.hs  List_.hs  Makefile  Matr0_.hs  Matr1_.hs  OpTab_.hs  PP_.hs  Partit_.hs  Partition.hs  Permut.hs  Pfact0_.hs  Pfact1_.hs  Pfact2_.hs  Pfact3_.hs  Pfact_.hs  (+45 more)
2.11/docon/source/demotest/: T_.hs  T_cubeext.hs  T_demo1.hs  T_detinterp.hs  T_diagmatr.hs  T_finfield.hs  T_grbas1.hs  T_grbas2.hs  T_permut.hs  T_pfactor.hs  T_polArit.hs  T_primes.hs  T_reseuc.hs  T_rpol.hs  T_sphGeo.hs  T_symfunc.hs
2.11/docon/source/demotest/reserve/: DiscrimExample.sav  FAAGBas_.sav  FAATest.sav  PrimeInt.sav  ReduceDecomp.sav  eqFromFile.sav  linalg.sav  readFileUsage.sav
2.11/docon/source/demotest/separateDemo/: CubicExt.hs
notes/: 2.08.txt  2.11.txt
(+135 files in other folders)
